fix bugs with z-index of apps

--- a/styles.css
+++ b/styles.css
@@ -135,8 +135,7 @@ main {
     position: relative;
     outline: 0;
     border: 0;
-    right: 0;
-    left: -1px;
+    left: 15px;
     top: 5px;
     width: 462px;
     height: 33px;
@@ -145,18 +144,20 @@ main {
 .keymic {
     display: flex;
     align-items: center;
-    padding-left: 17px;
+    padding-left: 8px;
+    padding-right: 15px;
 }
 .keyboard {
     position: relative;
     display: flex;
-    height: 19px;
-    width: 11px;
+    height: 44px;
+    width: 30px;
     background: url('./img/keyboardH.png') no-repeat center center;
-    padding-left: 36px;
+    margin-left: 36px;
     right: 3px;
     opacity: 0.6;
     top: -1px;
+    padding-right: 12px;
 }
 .keyboard:hover {
     opacity:0.8;
@@ -234,6 +235,7 @@ footer {
     margin: 30px 0 0 -2px;
     border-top: 1px solid;
     border-color: rgba(0,0,0,.1);
+    background: ;
 }
 .apps-table {
     display: flex;
@@ -293,6 +295,8 @@ footer {
     height: 496px;
     margin-bottom: 1px;
     padding-right: 1px;
+    z-index: 1001;
+    background-color: white;
 }
 .apps-txt {
     color: rgba(0,0,0,0.87);
